# serializer version: 1
# name: test_get_build_dirs[mock_repo0]
  list([
    PosixPath('.'),
  ])
# ---
# name: test_get_build_dirs[mock_repo1]
  list([
    PosixPath('sub_module_1'),
    PosixPath('sub_module_2'),
  ])
# ---
# name: test_get_build_dirs[mock_repo2]
  list([
  ])
# ---
